--- a/HDT-6.ipynb
+++ b/HDT-6.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Experimentación con la Tasa de Aprendizaje (Total: 25 puntos)"
+    "## 3) Experimentación con la Tasa de Aprendizaje (Total: 25 puntos)"
    ]
   },
   {
