--- a/HDT-6.ipynb
+++ b/HDT-6.ipynb
@@ -7,7 +7,9 @@
     "# Hoja de trabajo 06\n",
     "*Redes neuronales*\n",
     "\n",
-    "*Diego Morales | Alejandro Azurdia*"
+    "*Diego Morales* 21146\n",
+    "\n",
+    "*Alejandro Azurdia* 21242"
    ]
   },
   {
